Fix alignment

--- a/src/style.css
+++ b/src/style.css
@@ -116,7 +116,7 @@ header {
 #donate-button {
 	position: absolute;
 	top: 11px;
-	left: calc((100% - 185px) / 2);
+	left: calc((100% - 279px) / 2);
 	width: 185px;
 	height: 18px;
 	display: block;
